...
                app:boxBackgroundColor="@color/white"
                app:endIconMode="password_toggle"
                app:hintTextColor="@color/black"
                app:endIconTint="@color/schemesSecondary">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/black"
                    android:textSize="@dimen/textAppearanceBodyLarge"
                    android:inputType="textPassword"
                    android:importantForAutofill="yes"
...
            android:layout_below="@id/section_8"
            android:paddingHorizontal="16dp"
            android:paddingVertical="24dp"
            >

            <Button
                android:id="@+id/buttonLogin"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:minWidth="203dp"
                android:minHeight="62dp"
                android:layout_centerInParent="true"
                android:backgroundTint="@color/schemesOrange600"
...
